--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -293,7 +293,7 @@
               localStorage.removeItem('guestCart');
             }
             if (response.redirectUrl) {
-              window.location.href = response.redirectUrl; // Redirect to cart or admin page
+              window.location.href = response.redirectUrl; 
             } else {
               console.log('Redirect URL not found in response');
             }
